; ModuleID = '/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Radius.c_RadiusCreateUserName.c'
source_filename = "/home/carl/AnghaBench/SoftEtherVPN/src/Cedar/extr_Radius.c_RadiusCreateUserName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @RadiusCreateUserName(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca [254 x i32], align 16
  store i32* %0, i32** %3, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %1
  store i32* null, i32** %2, align 8
  br label %30

11:                                               ; preds = %1
  %12 = getelementptr inbounds [254 x i32], [254 x i32]* %7, i64 0, i64 0
  %13 = load i32*, i32** %3, align 8
  %14 = call i32 @UniToStr(i32* %12, i32 1016, i32* %13)
  %15 = getelementptr inbounds [254 x i32], [254 x i32]* %7, i64 0, i64 253
  store i32 0, i32* %15, align 4
  %16 = call i32* (...) @NewBuf()
  store i32* %16, i32** %4, align 8
  store i32 1, i32* %5, align 4
  %17 = getelementptr inbounds [254 x i32], [254 x i32]* %7, i64 0, i64 0
  %18 = call i32 @StrLen(i32* %17)
  %19 = add nsw i32 2, %18
  store i32 %19, i32* %6, align 4
  %20 = load i32*, i32** %4, align 8
  %21 = call i32 @WriteBuf(i32* %20, i32* %5, i32 1)
  %22 = load i32*, i32** %4, align 8
  %23 = call i32 @WriteBuf(i32* %22, i32* %6, i32 1)
  %24 = load i32*, i32** %4, align 8
  %25 = getelementptr inbounds [254 x i32], [254 x i32]* %7, i64 0, i64 0
  %26 = getelementptr inbounds [254 x i32], [254 x i32]* %7, i64 0, i64 0
  %27 = call i32 @StrLen(i32* %26)
  %28 = call i32 @WriteBuf(i32* %24, i32* %25, i32 %27)
  %29 = load i32*, i32** %4, align 8
  store i32* %29, i32** %2, align 8
  br label %30

30:                                               ; preds = %11, %10
  %31 = load i32*, i32** %2, align 8
  ret i32* %31
}

declare dso_local i32 @UniToStr(i32*, i32, i32*) #1

declare dso_local i32* @NewBuf(...) #1

declare dso_local i32 @StrLen(i32*) #1

declare dso_local i32 @WriteBuf(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
